--- a/.github/workflows/job.yaml
+++ b/.github/workflows/job.yaml
@@ -10,8 +10,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
           registry-url: https://registry.npmjs.org/
@@ -19,6 +20,12 @@ jobs:
         env:
           TOKEN_BASE64: ${{secrets.TOKEN_BASE64}}
       - run: chmod 600 ./test
-      - run: node key.js
+      - run: node key.js > current.txt
         env:
           TARGET: test
+          BEFORE: ./before.txt
+      - run: mv current.txt before.txt
+      - uses: actions/upload-artifact@v4
+        with:
+          name: before
+          path: ./before.txt
